--- a/shop.html
+++ b/shop.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="shop.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Second</title>
   </head>
   <body>
     <header>
       <div class="navbar">
         <div class="dropdown">
-          <button class="dropbtn">
-            Shop
-            <i class="fa fa-caret-down"></i>
-          </button>
+          <button class="dropbtn">Shop</button>
           <div class="dropdown-content">
             <a href="shop.html">All</a>
             <a href="#">Bestsellers</a>
@@ -26,6 +30,7 @@
         <a href="#home">Gifting</a>
         <a href="#news">Stores</a>
         <a href="#news">Our House</a>
+        <a href="" class="cart"><i class="fas fa-shopping-cart"></i>Cart</a>
       </div>
       <h1 id="logo">
         JO MALONE <br />
