added cart feature(almost working)

--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,22 @@
         <a href="#home">Gifting</a>
         <a href="#news">Stores</a>
         <a href="#news">Our House</a>
-        <a href="" class="cart"><i class="fas fa-shopping-cart"></i>Cart</a>
+        <!-- cart -->
+        <div class="dropdown">
+          <button class="dropbtn cart">
+            <i class="fas fa-shopping-cart"></i>
+          </button>
+          <!-- drobdown of cart -->
+          <div class="cart-container">
+            <div class="cart-content">
+              <h2>Cart</h2>
+            </div>
+            <div class="cart-footer">
+              <div class="subtotal">Subtotal:</div>
+              <button class="checkout">Checkout</button>
+            </div>
+          </div>
+        </div>
       </div>
       <h1 id="logo">
         JO MALONE <br />
