final version with styled

--- a/shop.html
+++ b/shop.html
@@ -36,10 +36,9 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <!-- drobdown of cart -->
-          <div class="cart-container">
-            <div class="cart-content">
-              <h2>Cart</h2>
-            </div>
+          <div class="cart-container dropdown-content">
+            <h2>Cart</h2>
+            <div class="cart-content"></div>
             <div class="cart-footer">
               <div class="subtotal">Subtotal:</div>
               <button class="checkout">Checkout</button>
