--- a/shop.html
+++ b/shop.html
@@ -27,9 +27,9 @@
             <a href="#">Bath and Body</a>
           </div>
         </div>
-        <a href="#home">Gifting</a>
+        <a href="index.html">Gifting</a>
         <a href="#news">Stores</a>
-        <a href="#news">Our House</a>
+        <a href="index.html">Our House</a>
         <!-- cart -->
         <div class="dropdown">
           <button class="dropbtn cart">
